# linux-surface-pen-button-remap

./: Cargo.toml  README.md  configure.sh  install.sh  surface-pen-button.service  uninstall.sh
etc/: remap.conf
src/: config.rs  main.rs
