[package]
name = "surface-pen-button"
version = "0.1.0"
authors = ["Maximilian Luz <luzmaximilian@gmail.com>"]
edition = "2018"

[dependencies]
evdev-rs = { version = "0.6.1", features = ["serde"] }
nix = "0.26.2"
glob = "0.3.1"
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"
anyhow = "1.0.70"
